# QTCopyHistory

./: CMakeLists.txt  clipboardmanager.cpp  clipboardmanager.h  historywindow.cpp  historywindow.h  main.cpp
build-release/QTCopyHistory_autogen/: moc_predefs.h  mocs_compilation.cpp
build-release/QTCopyHistory_autogen/EWIEGA46WW/: moc_clipboardmanager.cpp.d  moc_historywindow.cpp  moc_historywindow.cpp.d
